test/visibility/relative-use/use-relative-error8.good
use-relative-error8.chpl:1: In module 'M':
use-relative-error8.chpl:2: error: invalid use of 'super' in 'use'; 'M' is a top-level module
use-relative-error8.chpl:1: note: module 'M' was declared at the top level here
