test/visibility/relative-use/use-relative-error8.chpl
module M {
  use super.impossible;
}
